[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bitcask-py"
version = "1.0.0"
description = "An educational implementation of the Bitcask key-value store in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "seroze", email = "serozekim@gmail.com" }
]
keywords = ["bitcask", "key-value", "storage-engine", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/databases-seroze/bitcask_in_python"
Repository = "https://github.com/databases-seroze/bitcask_in_python"
Issues = "https://github.com/databases-seroze/bitcask_in_python/issues"

[tool.setuptools.packages.find]
include = ["bitcask*"]

[tool.pytest.ini_options]
testpaths = ["tests"]